--- a/juegos.html
+++ b/juegos.html
@@ -20,7 +20,7 @@
             </nav>
             <section class="textos-header">
                 <h1>¡Es Hora de Jugar!</h1>
-                <h2>Aprende mienstras juegas!</h2>
+                <h2>Aprende mientras juegas!</h2>
             </section>
 
 
