--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 0</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1ua0S1UOJLYAJ81AR7dsFzVZ23c2-WCxU/preview" width="640" height="480" allow="autoplay" controls poster="img/play-button-in-pure-css.gif"></iframe>
                 </section>
                 </div>
             </div>
@@ -99,7 +99,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 1</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1IFF4BslWprUFZB4x7qVWL6pbX7FnIRfe/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 10</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1L61x5FcjadW515mj55pd7GvFvV1Hum96/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -131,7 +131,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 2</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1oLxha7X9FlmvgcnhbQfitHn7O0JigLFd/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -154,7 +154,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 3</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1AvShJFTmQ3q96Vvt9lbUXiibi5isSDw_/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -163,7 +163,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 4</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1vjeJLXDrx3ojb-3jYRkYZea0oRtFREwr/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -172,7 +172,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 5</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1DYqu231CpcEq0Arz3ZGb5cycUgrLz1jD/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -181,7 +181,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 6</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1CobJb9U-iSujWoZn1zS2B95xXN7Og0C8/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -190,7 +190,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 7</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1Q0vj1DyvNXndI-MTu6GVf58CpjI82t9U/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -199,7 +199,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 8</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1lKUj1X377xsgR2uCooEqsh-9_5xWtDXG/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
@@ -208,7 +208,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 9</h2>
                 <div style="text-align: center;">
-                    <video src="video/Inicio_tablas.mp4" width=720  height=480 controls poster="img/play-button-in-pure-css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1Dq5jnSS7iy-aX3uO-ETwFYn_JoXFnoMT/preview" width="640" height="480" allow="autoplay"></iframe>css.gif"></video>
                 </section>
                 </div>
             </div>
