--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Dominar la tabla del 9</h2>
                 <div style="text-align: center;">
-                    <iframe src="https://drive.google.com/file/d/1Dq5jnSS7iy-aX3uO-ETwFYn_JoXFnoMT/preview" width="640" height="480" allow="autoplay"></iframe>css.gif"></video>
+                    <iframe src="https://drive.google.com/file/d/1Dq5jnSS7iy-aX3uO-ETwFYn_JoXFnoMT/preview" width="640" height="480" allow="autoplay"></iframe>
                 </section>
                 </div>
             </div>
